# test_python_cpp

./: .gitignore  MODULE.bazel  README.md  WORKSPACE.bzlmod  example_bazeless_env.ipynb
src/cpp/mm/: BUILD  ZMm.cpp  ZMm.h
src/cpp/service_factory/mm_service_factory/: BUILD  ZMmServiceFactory.cpp  ZMmServiceFactory.h  ZMmServiceFactoryImpl.cpp
src/cpp/service_implementation/mm_service/: BUILD  ZMmService.cpp  ZMmService.h
src/interface/: BUILD  IMmService.proto
src/python/example/: BUILD  example.py  test_mm_service.py  test_mm_service_single_process.py
