"""
This module contains build dependency for test_python_cpp.
"""

module(
    name = "z_test_python_cpp",
    version = "1.0.0",
)

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_python", version = "0.34.0")
bazel_dep(name = "rules_shell", version = "0.2.0")
bazel_dep(name = "protobuf", version = "27.1", repo_name = "com_google_protobuf")
bazel_dep(name = "googletest", version = "1.14.0", repo_name = "com_google_googletest")

# Bazel extensions for pybind11
bazel_dep(name = "pybind11_bazel", version = "2.12.0")
internal_configure = use_extension("//:internal_configure.bzl", "internal_configure_extension")
use_repo(internal_configure, "pybind11")
